--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.1",
+        "bcryptjs": "^3.0.2",
         "dotenv": "^16.4.7",
+        "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.13.0",
         "mongoose": "^8.10.1",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^22.13.8",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui": "^3.52.4",
